# livvos

./: .env  .env.encryption.example  .env.example  .gitignore  AGENTS.md  AUDIT_FULL.sql  App.tsx  CLAUDE.md  DEBUG_DEEP.sql  DEBUG_POLICIES.sql  FINANCE_RESOLUTION_COMPLETE.md  FIX_DOCUMENTOS.sql  FIX_STORAGE_FINAL.sql  FIX_STORAGE_RLS_V2.sql  FIX_STORAGE_RLS_V3.sql  FIX_STORAGE_RLS_V4.sql  FIX_STORAGE_RLS_V5.sql  FIX_STORAGE_RLS_V6.sql  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INICIAR_APP.bat  MIGRATION_SYSTEM_SUMMARY.md  README.md  RLS-IMPLEMENTATION.md  SUPABASE_INTEGRATION.md  SUPABASE_SETUP_CORREGIDO.md  SUPABASE_SETUP_GUIDE.md  VERIFY_POLICIES.sql  all_migrations.sql  basic-test.ts  clean_migrations.sql  clear-data.js  create-clients-tables.js  debug-navigation.js  index.html  index.tsx  insert-sample-data.js  package-lock.json  package.json  package.json.bak  (+20 more)
.agent/: README.md
.claude/: design-bundle-documents.html  design-bundle-os-styles.css  design-bundle-proposal-builder.jsx  launch.json  livv-activity-v2.html  livv-brief-v2.html  livv-chat-v2.md  settings.local.json
api/: upload-url.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: clipboard.rs  main.rs
aurora-livv/: ACTIVATION.md  DISCOVERY.md  EXPANSION_PLAN.md  IMPLEMENTATION.md  PLAYBOOK.md  README.md  SCHEMA_GAPS.md  TESTING.md
cloud-code/: AGENTS.md  DECISIONS.md  RULES.md  SYSTEM.md  TESTING.md
components/: AiAdvisor.css  AiAdvisor.tsx  BundlePreviewLauncher.tsx  CommandPalette.tsx  DebugPanel.tsx  ErrorBoundary.tsx  Layout.tsx  TopNavbar.tsx  (+5 more)
(+991 files in other folders)
