[package]
name = "antigravity-voice"
version = "0.1.0"
description = "Intelligent Voice Assistant"
authors = ["Antigravity Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Para clipboard
arboard = "3.2"

# Para simular teclas
enigo = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
